--- a/p8015_hw1_xs2447.md
+++ b/p8015_hw1_xs2447.md
@@ -1,3 +1,75 @@
 p8105\_hw1\_xs2447
 ================
 
+``` r
+library(tidyverse)
+```
+
+    ## ── Attaching packages ─────────────────────────────────────── tidyverse 1.3.1 ──
+
+    ## ✓ ggplot2 3.3.5     ✓ purrr   0.3.4
+    ## ✓ tibble  3.1.4     ✓ dplyr   1.0.7
+    ## ✓ tidyr   1.1.3     ✓ stringr 1.4.0
+    ## ✓ readr   2.0.1     ✓ forcats 0.5.1
+
+    ## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
+    ## x dplyr::filter() masks stats::filter()
+    ## x dplyr::lag()    masks stats::lag()
+
+## Problem 1
+
+Create data frame
+
+``` r
+df = tibble(
+  random_samp = rnorm(10),
+  vec_log = c(random_samp > 0),
+  vec_char = c("Hi","My","name","is","Xinran","Sun","Nice","to","Meet","You"),
+  vec_factor = factor(c("small","large","medium","large","large","small","medium","medium","medium","medium")))
+```
+
+Calculate mean
+
+``` r
+mean_sample = mean(pull(df, random_samp))
+mean_log = mean(pull(df, vec_log))
+mean_char = mean(pull(df, vec_char))
+```
+
+    ## Warning in mean.default(pull(df, vec_char)): argument is not numeric or logical:
+    ## returning NA
+
+``` r
+mean_factor = mean(pull(df, vec_factor))
+```
+
+    ## Warning in mean.default(pull(df, vec_factor)): argument is not numeric or
+    ## logical: returning NA
+
+We cannot get mean for the character and factor vector. No I try to use
+as.numeric function for the logic, character, and factor variables.
+
+``` r
+mean_log = mean(as.numeric(pull(df, vec_log)))
+mean_char = mean(as.numeric(pull(df, vec_char)))
+```
+
+    ## Warning in mean(as.numeric(pull(df, vec_char))): NAs introduced by coercion
+
+``` r
+mean_factor = mean(as.numeric(pull(df, vec_factor)))
+```
+
+After using as.numeric function, logic and factor variables can give
+results while character variable still cannot give result. This is
+because as.numeric assign numerical values to the logic and factor
+variables, such as 1 for TRUE. However, what assigned to character
+variable is “NA”. Therefore, R cannot calculate the mean of the “NA”s.
+
+## Problem 2
+
+Load penguins dataset
+
+``` r
+penguins_data = data("penguins", package = "palmerpenguins")
+```
