--- a/p8015_hw1_xs2447.md
+++ b/p8015_hw1_xs2447.md
@@ -18,7 +18,7 @@ library(tidyverse)
 
 ## Problem 1
 
-Create data frame
+\#Create data frame
 
 ``` r
 df = tibble(
@@ -28,7 +28,7 @@ df = tibble(
   vec_factor = factor(c("small","large","medium","large","large","small","medium","medium","medium","medium")))
 ```
 
-Calculate mean
+# Calculate mean
 
 ``` r
 mean_sample = mean(pull(df, random_samp))
@@ -68,8 +68,31 @@ variable is “NA”. Therefore, R cannot calculate the mean of the “NA”s.
 
 ## Problem 2
 
-Load penguins dataset
+# Load penguins dataset
 
 ``` r
-penguins_data = data("penguins", package = "palmerpenguins")
+data("penguins", package = "palmerpenguins")
 ```
+
+This dataset provides information about penguins species, island,
+bill\_length\_mm, bill\_depth\_mm, flipper\_length\_mm, body\_mass\_g,
+sex, year. It has 344 rows and 8 columns. The mean flipper length is
+200.9152047.
+
+# Make plot
+
+``` r
+ggplot(penguins, aes(x = bill_length_mm, y = flipper_length_mm, color = species)) + geom_point()
+```
+
+    ## Warning: Removed 2 rows containing missing values (geom_point).
+
+![](p8015_hw1_xs2447_files/figure-gfm/unnamed-chunk-6-1.png)<!-- -->
+
+``` r
+ggsave("penguins'length.png")
+```
+
+    ## Saving 7 x 5 in image
+
+    ## Warning: Removed 2 rows containing missing values (geom_point).
